# FastSerial

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  ReadMe.md  doxybook.json
.doxybook/: config.json
.doxybook/templates/: header.tmpl
Documentation/: Classes.md  Examples.md  Files.md  Groups.md  Namespaces.md  ReadMe.md  Related.md  _read_me_8md.md  _serial_8hpp.md  _serial_enumeration_8hpp.md  dir_d44c64559bbebec7f509842c48db8b23.md  index.md  index_classes.md  index_examples.md  index_files.md  index_groups.md  index_namespaces.md  index_pages.md  indexpage.md  namespace_0d1.md  namespace_serial.md  namespace_serial_1_1pci.md  namespace_serial_1_1platform.md  namespace_serial_1_1pnp.md  namespace_serial_1_1usb.md  struct_serial_1_1_device.md  struct_serial_1_1_device_info.md  struct_serial_1_1_enum.md  struct_serial_1_1_frame.md  struct_serial_1_1_frame_buffer.md  struct_serial_1_1_port_info.md  struct_serial_1_1_port_iter.md
Documentation/Classes/: index.md  struct_serial_1_1_device.md  struct_serial_1_1_device_info.md  struct_serial_1_1_enum.md  struct_serial_1_1_frame.md  struct_serial_1_1_frame_buffer.md  struct_serial_1_1_port_info.md  struct_serial_1_1_port_iter.md
Documentation/Examples/: index.md
Documentation/Files/: _read_me_8md.md  _serial_8hpp.md  _serial_enumeration_8hpp.md  dir_d44c64559bbebec7f509842c48db8b23.md  index.md
Documentation/Modules/: index.md
Documentation/Namespaces/: index.md  namespace_0d1.md  namespace_serial.md  namespace_serial_1_1pci.md  namespace_serial_1_1platform.md  namespace_serial_1_1pnp.md  namespace_serial_1_1usb.md
Documentation/Pages/: index.md
Examples/: CMakeLists.txt  EnumerationTest.cpp  LoopbackTest.cpp  TimeoutTest.cpp
Serial/: CMakeLists.txt  Serial.hpp  SerialEnumeration.cpp  SerialEnumeration.h  SerialEnumerationLinux.cpp  SerialEnumerationWindows.cpp  main.cpp
include/: Serial.hpp  SerialEnumeration.h  SerialEnumeration.hpp
src/: CMakeLists.txt  SerialEnumeration.cpp  SerialEnumerationLinux.cpp  SerialEnumerationWindows.cpp  SerialLinux.cpp  SerialWindows.cpp
